--- a/inner-page.html
+++ b/inner-page.html
@@ -75,27 +75,27 @@
         <nav id="navbar" class="nav-menu navbar">
           <ul>
             <li>
-              <a href="#hero" class="nav-link scrollto active"
+              <a href="index.html" class="nav-link scrollto active"
                 ><i class="bx bx-home"></i> <span>Home</span></a
               >
             </li>
-            <li>
+            <!-- <li>
               <a href="#about" class="nav-link scrollto"
                 ><i class="bx bx-user"></i> <span>About</span></a
               >
-            </li>
+            </li> -->
             <!-- <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li> -->
-            <li>
+            <!-- <li>
               <a href="#portfolio" class="nav-link scrollto"
                 ><i class="bx bx-book-content"></i> <span>Content</span></a
               >
-            </li>
+            </li> -->
             <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
-            <li>
-              <a href="#contact" class="nav-link scrollto"
+            <!-- <li>
+              <a href="index.html" class="nav-link scrollto"
                 ><i class="bx bx-envelope"></i> <span>Contact</span></a
               >
-            </li>
+            </li> -->
           </ul>
         </nav>
         <!-- .nav-menu -->
